# tap-mongodb

./: .gitignore  LICENSE  meltano.yml  pyproject.toml
.github/workflows/: test.yml
tap_mongodb/: collection.py  tap.py
