[project]
name = "tap-mongodb"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "genson>=1.3.0",
    "orjson>=3.11.3",
    "pymongo>=4.14.1",
    "pyyaml>=6.0.2",
    "requests>=2.32.5",
    "singer-sdk>=0.48.1",
]



[project.optional-dependencies]
s3 = [
    "s3fs~=2025.9.0",
]

[project.scripts]
# CLI declaration
tap-mongodb = 'tap_mongodb.tap:TapMongoDB.cli'

[dependency-groups]
dev = [
    { include-group = "test" },
    "meltano>=3.9.1",
    "pytest>=8.4.1",
]
test = [
    "pytest>=8",
    "pytest-github-actions-annotate-failures>=0.3",
    "singer-sdk[testing]",
]
typing = [
    "mypy>=1.16.0",
    "types-requests",
]

[tool.pytest.ini_options]
addopts = [
    "--durations=10",
]

[tool.mypy]
warn_unused_configs = true
disable_error_code = ["import-untyped"]

[tool.ruff.lint]
ignore = [
    "COM812",  # missing-trailing-comma
]
select = ["ALL"]

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true

[tool.ruff.lint.pydocstyle]
convention = "google"

[build-system]
requires = [
    "hatchling>=1,<2",
]
build-backend = "hatchling.build"

# This configuration can be used to customize tox tests as well as other test frameworks like flake8 and mypy
[tool.tox]
min_version = "4.22"
requires = [
    "tox>=4.22",
    "tox-uv",
]
env_list = [
    "typing",
    "py314",
    "py313",
    "py312",
    "py311",
    "py310",
]

[tool.tox.env_run_base]
runner = "uv-venv-lock-runner"
pass_env = [
    "GITHUB_*",
    "TAP_MONGODB_*",
]
dependency_groups = [ "test", "typing" ]
commands = [ [ "pytest", { replace = "posargs", default = [ "tests" ], extend = true } ] ]

[tool.tox.env.typing]
dependency_groups = [ "test", "typing" ]
commands = [ [ "mypy", { replace = "posargs", default = [ "tap_mongodb", "tests" ], extend = true } ] ]
